new-installer/targets/aws/iac/vpc/vpc.tf
# SPDX-FileCopyrightText: 2025 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

#trivy:ignore:AVD-AWS-0178 VPC Flow Logs Not Enabled
resource "aws_vpc" "main" {
  cidr_block           = var.cidr_block
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support   = var.enable_dns_support
  tags = {
    Name : var.name
  }
}

# Test
